--- a/main.css
+++ b/main.css
@@ -444,7 +444,7 @@ main {
 }
 
 .about-page h1 {
-		margin-top: var(--margin-one-up);
+	margin-top: var(--margin-one-up);
 	}
 
 .about-page p {
@@ -458,13 +458,20 @@ main {
 @media ( min-width: 950px ) {
 
 	.about-page {
+		align-items: center;
 		flex-direction: row;
+		margin: 0 auto;
+		padding: 5rem 0;
+	}
+
+	.about-page h1 {
+		margin-top: 0;
 	}
 
 	.about-page img {
-	margin-right: 4rem;
-	max-height: 50%;
-	max-width: 50%;
+		margin-right: 4rem;
+		max-height: 50%;
+		max-width: 50%;
 	}
 
 }
