--- a/main.css
+++ b/main.css
@@ -495,17 +495,18 @@ main {
 	padding-right: 1rem;
 }
 
-.resume-skills details {
+.resume-other details {
 	border-bottom: 1px solid var(--color-gray-dark);
 	padding: .5rem;
 }
 
-.resume-skills summary {
+.resume-other summary {
 	padding: .5rem;
 }
 
-.resume-skills summary:focus {
+.resume-other summary:focus {
 	border-bottom: .5rem;
+	color: var(--color-accent);
 	outline: none;
 }
 
@@ -545,15 +546,9 @@ main {
 		grid-row-end: 4;
 	}
 
-	.resume-awards {
-		grid-column-start: 1;
-		grid-row-start: 4;
-	}
-
-	.resume-skills {
+	.resume-other {
 		grid-column-start: 2;
-		grid-row-start: 3;
-		grid-row-end: 5;
+		grid-row-start: 2;	
 	}
 
 }
