--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ nav a {
 }
 
 .nav-logo {
-	color: var(--color-accent);
+	color: #5a4bc9);
 	font-size: var(--font-size-five-up);
 }
 
@@ -298,7 +298,7 @@ footer a {
 ========================================================================*/
 
 header {
-	background-color: var(--color-gray-light);
+	background-color: white;
 	padding: 2rem 0;
 	position: fixed;
 	top: 0;
