--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 html {
 
-	--color-gray-light: #ededed;
+	--color-gray-light: #f5f5f5;
 	--color-gray-medium: #888;
 	--color-gray-dark: #575757;
 	--color-accent: #a6462b;
